--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         >
        <ImageView
+           android:id="@+id/iv_top"
            android:background="@mipmap/mimi"
            android:layout_gravity="center"
            android:scaleType="center"
