--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,10 +17,17 @@
         android:title="@string/love"
         app:showAsAction="ifRoom" />
 
+    <!--<item-->
+        <!--android:id="@+id/action_item_more"-->
+        <!--android:icon="@mipmap/ic_more_navbar"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title="@string/more"-->
+        <!--app:showAsAction="ifRoom" />-->
+
     <item
         android:id="@+id/action_item_more"
-        android:icon="@mipmap/ic_more_navbar"
-        android:orderInCategory="100"
-        android:title="@string/more"
-        app:showAsAction="ifRoom" />
+        android:orderInCategory="111"
+        android:title="晓天的业余app"
+        android:icon="@mipmap/ic_github"
+        app:showAsAction="never" />
 </menu>
